# ComfyUI_CrossImageAttention

./: README.md  appearance_transfer_model.py  nodes.py  pyproject.toml
models/: stable_diffusion.py  unet_2d_condition.py
utils/: attention_utils.py  image_utils.py  latent_utils.py  model_utils.py  segmentation.py
