[project]
name = "comfyui_crossimageattention"
description = "ComfyUI for [a/CrossImageAttention](https://github.com/garibida/cross-image-attention)"
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["matplotlib==3.6.3", "matplotlib-inline==0.1.6", "jupyter==1.0.0", "numpy==1.24.1", "pyrallis==0.3.1", "torch==2.0.1", "torchvision==0.15.2", "diffusers==0.19.3", "transformers==4.30.2", "accelerate==0.20.3", "huggingface-hub==0.16.4", "xformers==0.0.21", "tokenizers==0.13.3", "nltk==3.8.1", "Pillow==10.1.0", "scikit_learn==1.3.0", "tqdm==4.64.1"]

[project.urls]
Repository = "https://github.com/leeguandong/ComfyUI_CrossImageAttention"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_CrossImageAttention"
Icon = ""
